# yoinkit

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.claude/: launch.json
.github/workflows/: build.yml  extension.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai.rs  api.rs  archiver.rs  auth.rs  clipper.rs  commands.rs  db.rs  download_manager.rs  image_scraper.rs  lib.rs  license.rs  main.rs  markdown.rs  mcp_server.rs  monitor.rs  notebooklm.rs  scheduler.rs  search.rs  settings.rs  tray.rs  wget.rs  ytdlp.rs
apps/desktop/src/components/: BatchInput.tsx  ChatMessage.tsx  CommandBuilder.tsx  CommandPreview.tsx  ConfettiCelebration.tsx  DownloadItem.tsx  DownloadList.tsx  GalleryItem.tsx  GalleryToolbar.tsx  LegalConsent.tsx  MarkdownPreview.tsx  PresetManager.tsx  ProBadge.tsx  ProOverlay.tsx  SearchResults.tsx  TagEditor.tsx  UrlInput.tsx  YoinkReceipt.tsx
apps/desktop/src/hooks/: useAI.ts  useClips.ts  useDownloads.ts  (+5 more)
apps/extension/: package.json  tailwind.config.js  vite.config.ts
apps/extension/manifests/: chrome-manifest.json  firefox-manifest.json  safari-manifest.json
docs/superpowers/plans/: 2026-03-20-yoinkit-plan.md  2026-03-21-yoinkit-v2-master-plan.md  2026-03-22-yoinkit-pro-implementation.md
docs/superpowers/specs/: 2026-03-20-yoinkit-design.md  2026-03-22-yoinkit-pro-design.md
scripts/: build-wget.sh
(+22 files in other folders)
